# ChangeLog for app-laptop/tlp
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*tlp-0.3.9 (02 May 2013)

  02 May 2013; Andre Erdmann <dywi@mailerd.de> +tlp-0.3.9.ebuild:
  Bugfix release, see upstream's changelog for details

  02 Apr 2013; Andre Erdmann <dywi@mailerd.de> tlp-0.3.7.1.ebuild:
  Fix building of tlp 0.3.7.1 which previously failed during src_prepare()
  because EGIT_COMMIT was not set properly. Instead, the ebuild always
  used upstream's master branch, which does no longer work since 0.3.8.1 has
  has been released.
  Reported by Burak Aktas (codwow; github issue #2).

*tlp-0.3.8.1 (30 Mar 2013)

  30 Mar 2013; Andre Erdmann <dywi@mailerd.de> +tlp-0.3.8.1.ebuild:
  Added upstream release 0.3.8.1 containing bug fixes, stability patches
  as well as new features. See the previous entries in this file (since
  0.3.7.1) and/or the upstream's changelog.

*tlp-0.3.7.903_pre20130315 (15 Mar 2013)

  15 Mar 2013; Andre Erdmann <dywi@mailerd.de> +tlp-0.3.7.903_pre20130315.ebuild:
  added tlp devel version 0.3.7.903 (a.k.a. 0.3.8 beta 1)

*tlp-0.3.7.901_pre20130126-r1 (26 Jan 2013)

  26 Jan 2013; Andre Erdmann <dywi@mailerd.de> +tlp-0.3.7.901_pre20130126-r1.ebuild:
  same as tlp-0.3.7.901_pre20130126 with the following differences:
  - added dependency on sys-power/acpid
  - depend on any-of net-wireless/iw net-wireless/wireless-tools (in that order)
  - added note during pkg_postinst() that acpid has to be restarted

*tlp-0.3.7.901_pre20130126 (26 Jan 2013)

  26 Jan 2013; Andre Erdmann <dywi@mailerd.de> +tlp-0.3.7.901_pre20130126.ebuild:
  added tlp devel version 0.3.7.901 (as of Jan 26 2013)
  Notable changes:
  - (selectively) disable radio devices when the hardware switch is turned on
  - tlp-pcilist
  - use iw instead of iwconfig (if available)
  - Bugfixes/Workarounds for the cpu boost feature

  25 Jan 2013; Andre Erdmann <dywi@mailerd.de> -tlp-0.3.6.900.ebuild:
  old ebuild removed as announced in package.mask
