@@ -2,14 +2,10 @@ AUX tlp-functions-fix-get_wifi_ifaces.patch 932 SHA256 f02c03dfb41a7f80166ada46e
 AUX tlp-stat-do-not-set-needs_root_priv-0-directly.patch 1864 SHA256 0534be8f8f11b5a014380ab3b3d2fc7f0f23d8113dc75e6ac6b768abb41f4adf SHA512 308c34a9938aba725fdb9a7d1e6584551d2619e0e45553338a7b19825a2e45677ccb363780091b5cb4733ce009c9fb3ae2d21aee78c12a822e66a49ca7ebfd8e WHIRLPOOL b87ca02f7230ccfa8d67ccf72e95eea56c91c29fa179dee49daf1f1492017c87e7cc7088b9be6264b6f39f1d59a048e8f1f517a987ab476a867879c991b5df4d
 AUX tlp-usblist-print-unknown-if-device-desc-is-empty.patch 946 SHA256 a057019074e44935723cb32e541004db37f8f918775a400c9aefc3bd0be6825c SHA512 6e9fc48127e0784c809ee88428101bd599449661f8eb629db4244e4a3406bbfe0683278322a7e7564c869743ebf01a87507f5e6e375eac76e3783721a483e8ee WHIRLPOOL f160968e6287a28f7a86d110de8da60deed3f0f06f7ce0ae15d2e42506e3adaf148b1346d1981a69eba36f095017633ab41446807413836dee86f88e4f2d94ec
 DIST tlp-gentoo-additions-0.3.7.1.tar.bz2 9073 SHA256 0f139b54adaf5a340cf200d7ee8602e53f94558f94d430d043e907985c4d3a67 SHA512 0a56ea1b7270c8ea5fe1157ae64f42da67e79e02243bf33bffba825b5b53628bace31ab00b3b0448dde00a2db215d7c5012ae4774552f1c4ff0e7e197d45600b WHIRLPOOL dea2a3c80f55945d6b76d8ee8a8b9d9cd27877314fddc0145d0886516b9c274c124c365274845d40a7f091fe7304b2a69827d136aefa75ce53b89e4905814c51
-DIST tlp-gentoo-additions-0.3.7.901-r3.tar.bz2 9238 SHA256 9eaaee1d3e2378a61ec91d9381c946252341d87761c448ee3c52fa0beb839c94 SHA512 36d14f33ba3d3cd78361fcd993d119d337316c34f8f43bbdbda4c5e363172fcaae2ce50ea80ede935e91eeea33c50c5571eb1980c11fc05d276f54d4b164084c WHIRLPOOL fdaa6752e587cd1e470e43a4aa014539a52fa1f56aba43c0a2458534aa65bd512586bbc8f6aeefee8b7c6a64310b003bc7371762090e8562dfe46d5062d73809
-DIST tlp-gentoo-additions-0.3.7.903.tar.bz2 9250 SHA256 00eb1c48584f49193753702a99ad4b25df03c75b19e70c81adfbae3ce905d668 SHA512 39194ed6ebaf0e97c8315206b79c1768e527655f77a33e864bb8d3d8e2b6afa0a5e966567e6a485f1d57ec6c55860c56e3eedc0502804c0d39cf647376071eea WHIRLPOOL 353538e7dd080a369dbd3b962d07433597d18b8ae3cc244f1a006adcc97bb3311b43393820a2f8409a12b3fd2b3e25b02f189eed55bc54b3f4f8959ca35825b0
 DIST tlp-gentoo-additions-0.3.8.1.tar.bz2 9227 SHA256 b04e22b5a5c63665ef742ca88a100694f21072e80162c34a4a7ef00367681343 SHA512 cc44e8dfc1f7e103df89c5b80e1f1f7de0fecf022eafaa497d733980cf0396ca136356ff5606cbafe693a05b7c2c315858b007acd26fa01728efc061ab2cab07 WHIRLPOOL 7f201107509da020dbe7d5e223cafb2f5ee70e73dde21f14c786f9b9eb76970e9bcecf39c5ecbdc3815b29808e7c120660ce141927492e8e4e8d788cd7d456e6
 DIST tlp-gentoo-additions-0.3.9.tar.bz2 9209 SHA256 3e82e50c4f673ee3225f58aae90cac2eb04fdca4293572da09411dbbebe0f51b SHA512 cfef43fb3993a021520d7b6571d31b27130a1c58851c93cd1b8b936a1d73a7362f9d084553baf2675558b29a8d1dab5f119420b1e62a19e8a834d35776db1953 WHIRLPOOL e7c387cc2b377dfa345bc491fa941de7d95da0354b3b60e13dbd68c433d25d7e37ab0a1f8ad89b166d05054b5b10977869b0792f1dd9d35fd5a50c0ffd2e91ff
 EBUILD tlp-0.3.7.1.ebuild 5503 SHA256 f42b49612ee818b4e3a4d5ab41655b3de40d768535ad41561f89ab9206f77e61 SHA512 d6c383f99cbfd087c1803e02531a8c86cab0cfc03e3c4e26cc7477c9e43c4f94b74aceda6647ec6ab887b9af9c7398e2047efd0c03978c5de4c8025696256830 WHIRLPOOL 0d5698b88a20cdff62d53b059f7795735b8c991364c5609db159911537bf13d10cb6b6ec5dbf375b4c660689b5ecae7d604795fb3dba46c19b3aeb39ff3bb473
-EBUILD tlp-0.3.7.901_pre20130126-r1.ebuild 8392 SHA256 06ac3d51bc5633fb3f759f5167f725da52a7ee80c272211c91c3757520b6b374 SHA512 4415fee35950ed3e51805c6b98fa0be80d92645c103a9782bf46eef57607a3e1367a9655af7bfefc0f9c738bd7ae28cb2383dccad410f058487044048f28452b WHIRLPOOL 6d6b5cd692c8af3583bd1622c78a98cf9b199c9185abb14a6ef736ab4b5d2287e40746d0e2d29e96f6d460b1d62d3c204d3682e9c90c00d800964ec840084caf
-EBUILD tlp-0.3.7.903_pre20130315.ebuild 6748 SHA256 8451bf3b68a1e0c34982786f78fd706d6f2d47b69f9f86a8cc6ed0de144253e6 SHA512 4164feff0ba63ff311afbc2e054eb497bf9d63a5023a9da2f2dd085530c8d7b3610ea255612c5eb1804a95a1809cc4e2ab5c1c874e36d6922c02229699f0e630 WHIRLPOOL 9ebe2fe05de1b503f47fead1996c00718e77fc70ccced0a29fef12dd78bcc1529b41255eef370b243b89cb6a259320043ed82a0706c70a20de147d80207acc92
 EBUILD tlp-0.3.8.1.ebuild 5685 SHA256 d043bb46d71a8766b7e4d0eca373b8837287220b92caf9128f6b027c28ed6c58 SHA512 0bc3bd016006de6e598f082db40d04c0bacde6e3d0dca52daa7e452009d4350fe7c228fa3beb3b4bd7c2d1142850b70f1a30b2ee5fd7806c4f1f9ee012627c76 WHIRLPOOL 2b3e1ff6dcb72a3203a64dc9bb36855021df3c139de9786d35034cab37dd13fb3fea3a183c9af8a92755ca62c5577ef00a3423f41ab1ad8b8cad9b69b0eb085b
 EBUILD tlp-0.3.9.ebuild 5719 SHA256 13a608c4ce102ea8621d794bb41b1c11732b44ae1e88c635bc66723b949acde4 SHA512 9a151046b589a31ca7e3d1caed68d6cd4230a886e72b49d6c97a898b5a0180f54a46e3b941783a1649612c98e545865097dbf31a3ab764fbcce4252a9510be42 WHIRLPOOL ae7f34103150bfe348bc5cd0248bba9b7d970ccdca676a1e4dadf288b5de5d0dd451c29d33f5df75eac778cf0356dc144efbb19d377fd33a67915cfc10fb2408
-MISC ChangeLog 6257 SHA256 d5553bf033dfe7072e156ffdb505240623b9060c399dcc4c4cc5ab53a6273974 SHA512 34a3acf02caf68a8fccf16d78e14066c14bb40be51ebf2b743516b3ecad72d41f53514ce39a0fbcb414bf3915123e237b99394e6134434b874e2a799b79663c0 WHIRLPOOL 64461a83173b6700aeefd1267a92c6bd6cb57c04ed6c1ba714f339dff1076f539666322aedafe0b0a42dace145dd198c76e68b7db63a35d964344ff33c58aed9
+MISC ChangeLog 6437 SHA256 897e3296e789177eb5076556ac9242aec0e8abb875f8eb23316e3b4b3fbb7ddb SHA512 593bcbddb55de302c15a526774e37e1a696bddfd47b0c7a0190b59666d452015c5ddda25619512b16f2514b7717b5f93d5d73579be0972bd9ed6856806fc3287 WHIRLPOOL 94f4d151b8544fac50cf70ad0036f3406c7571cce206d272b2ce552dae735bc29fd1c8918de808aea5c3c0c9d5c5190637ba2e2babe4567e6686bdfb2ea1f642
 MISC metadata.xml 1691 SHA256 fdfca8125ccdbc41454ee45f2047fb48d64d7e91559ee632b0f9429998fe2ced SHA512 24a4630f91705f6898b8091a37e712ef81356846b39c843725e3dfc1f413f690450c4638f0c049cdebd3af20bb2e52a0b7cc1a20e204e9a5a113efb757911a97 WHIRLPOOL 52ad6e53118146ef27435d93bc4d2937ad74d75dcd220b56ae0e09a13539d079bdc73cae16fdccab18c8448fdf77740e9fd382cc55f509336f34439241e79d63
