@@ -2,6 +2,11 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 May 2013; Andre Erdmann <dywi@mailerd.de>
+  -tlp-0.3.7.901_pre20130126-r1.ebuild,
+  -tlp-0.3.7.903_pre20130315.ebuild:
+  devel versions removed as announced in package.mask.
+
 *tlp-0.3.9 (02 May 2013)
 
   02 May 2013; Andre Erdmann <dywi@mailerd.de> +tlp-0.3.9.ebuild:
